# discord-bot

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  cmds.go  docker-compose.yaml  go.mod  go.sum  main.go  pyproject.toml
.github/workflows/: ci.yaml
pkg/ai/: ai.go  discord.go  tts.go
pkg/elevenlabs/: elevenlabs.go
pkg/engines/decoder/: decoder.go
pkg/engines/voiceactivation/: engine.go  window.go
pkg/prompts/: prompts.go
pkg/request/: request.go
pkg/stt/: backend.go
pkg/tts/: coqui.go  elevenlabs.go  tts.go
src/: brain.py  chat.py  discord_audio.py  discord_stream.py  engine.py  main.py  sink.py  stt.py  test_brain.py  test_chat.py  test_sink.py  tts.py  utils.py
src/config/: __init__.py  config.example.yaml
