[tool.poetry]
name = "discord-bot"
version = "0.1.0"
description = ""
authors = ["0x28F4 <0x28F4@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
py-cord = {extras = ["voice"], version = "^2.6.1"}
google-cloud-speech = "^2.27.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
